<resources>
    <string name="app_name">WeatherApp</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogTitle">Location Permission</string>
    <string name="GPSAlertDialogMessage">Open Settings to Enable Location</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="NetworkConnection">Please turn on Internet Connection</string>
    <string name="NetworkPermission">Internet Permission</string>
    <string name="_176_c">°F</string>
    <string name="weather_details">Weather Details</string>
    <string name="air_details">Air Details</string>
    <string name="apparent_temperature">Apparent Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="min_temp">Minimum Temperature</string>
    <string name="max_temp">Maximum Temperature</string>
    <string name="cloud_precip">Cloud Precipitation</string>
    <string name="sunrise">Sunrise Time</string>
    <string name="wind_bearing">Wind Bearing</string>
    <string name="sunset">Sunset Time</string>
    <string name="air_quality_details">Air Details</string>
    <string name="carbon_monoxide">Carbon Monoxide</string>
    <string name="nitrogen_oxide">Nitrogen Oxide</string>
    <string name="pm10">PM10</string>
    <string name="pm2_5">PM2.5</string>
    <string name="sulphur_dioxide">Sulphur Dioxide</string>
    <string name="air_quality_index">Air Quality Index</string>
    <string name="pollen_details">Pollen Details</string>
    <string name="grass_pollen">Grass Pollen</string>
    <string name="tree_pollen">Tree Pollen</string>
    <string name="count">Count:</string>
    <string name="risk">Risk:</string>
    <string name="weed_pollen">Weed Pollen</string>
    <string name="soil_details">Soil Details</string>
    <string name="soil_moisture">Soil Moisture:</string>
    <string name="soil_temperature">Soil Temperature:</string>
    <string name="fire_details">Fire Details</string>
    <string name="confidence">Confidence:</string>
    <string name="frp">FRP:</string>
    <string name="daynight">DayNight:</string>
    <string name="distance">Distance:</string>
    <string name="scanner">Scanner</string>
    <string name="code_reader">Code Reader</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="location">Location:</string>
    <string name="resend_code"><u>Re-send Code</u></string>
    <string name="login">LOGIN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="show_password">Show Password</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_any_code">Didn\'t receive any code?</string>
    <string name="farmer_details">Farmer details</string>
    <string name="ozone">Ozone</string>
    <string name="submit">Submit</string>
    <string name="celsius">℃</string>
    <string name="my_profile">My Profile</string>
    <string name="translate">Translate</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="misc">Misc</string>
    <string name="welcome_note">Welcome Back! \nPlease log in to continue!</string>
    <string name="sign_up_note">Sign up to keep exploring\namazing features in the app!</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="address">Address</string>
    <string name="area_owned">Area Owned</string>
    <string name="full_name">Full Name</string>
    <string name="food_nutrients">Food Nutrients</string>
    <string name="food_recipe">Food Recipe</string>
    <string name="food_nutrition_details">Food Nutrition Details</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="protein">Protein</string>
    <string name="sodium">Sodium</string>
    <string name="potassium">Potassium</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fiber">Fiber</string>
    <string name="sugar">Sugar</string>
    <string name="food_recipe_details">Food Recipe Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="servings">How many Servings?</string>
    <string name="how_to_make">How to make?</string>
    <string name="choose_misc">Choose to Explore More</string>
    <string name="food_nutrition">Food Nutrition</string>
    <string name="choose_category">Choose Category</string>
    <string name="profile">My Profile</string>
    <string name="weather_report">Weather Report</string>
    <string name="air_report">Air Report</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="registration">Registration</string>
    <string name="verification">Verification</string>
    <string name="farmer_information">Farmer Information</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="get_code">Get Code</string>
    <string name="code">Code</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="total_area_of_farmer">Total area of Farmer</string>
    <string name="farmer_address">Farmer Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="dictionary">Dictionary</string>
    <string name="enter_word_to_search">Enter word to search</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="body_fat_percent">Body Fat Percent</string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="health_category">Health Category</string>
    <string name="health">Health</string>
    <string name="age">Age</string>
    <string name="weight_in_kg">Weight(in kg)</string>
    <string name="height_in_cm">Height(in cm)</string>
    <string name="you_are">You are</string>
    <string name="ideal_weight_details">Ideal Weight Details</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ideal_weight_according_to">Ideal Weight According to:</string>
    <string name="hamwi_method">Hamwi Method</string>
    <string name="devine_method">Devine Method</string>
    <string name="miller_method">Miller Method</string>
    <string name="robinson_method">Robinson Method</string>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>