<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/scanner"
        android:title="@string/code_reader"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        app:actionViewClass="com.budiyev.android.codescanner.CodeScannerView"
        app:showAsAction="never" />
    <item
        android:id="@+id/userProfile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/appTranslate"
        android:title="@string/translate"
        android:icon="@drawable/ic_baseline_g_translate_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/shoppingCart"
        android:title="Cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/cart_action_item"/>
    <item
        android:id="@+id/logoutProfile"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="never" />

</menu>