<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/selectionFragment"
        android:name="com.example.weatherapp.splashScreenFragment.SelectionFragment"
        android:label=""
        tools:layout="@layout/fragment_selection">

        <action
            android:id="@+id/action_selection_to_login"
            app:destination="@+id/loginFragment" />

        <action
            android:id="@+id/action_selection_to_signup"
            app:destination="@+id/registerFragment" />

    </fragment>

    <fragment
        android:id="@+id/miscCategoryFragment"
        android:name="com.example.weatherapp.chooseMiscCategory.ChooseMiscCategoryFragment"
        android:label="@string/choose_misc"
        tools:layout="@layout/fragment_misc_category">

        <action
            android:id="@+id/action_misc_cate_to_food_details"
            app:destination="@+id/foodDetailsFragment" />

        <action
            android:id="@+id/action_misc_cate_to_food_recipe"
            app:destination="@+id/foodRecipeDetailsFragment" />

        <action
            android:id="@+id/action_misc_cate_to_dictionary"
            app:destination="@+id/dictionaryFragment" />

    </fragment>

    <fragment
        android:id="@+id/foodDetailsFragment"
        android:name="com.example.weatherapp.foodFragment.FoodQualityDetailsFragment"
        android:label="@string/food_nutrition"
        tools:layout="@layout/fragment_food_details">


        <action
            android:id="@+id/action_food_details_to_category"
            app:destination="@+id/miscCategoryFragment" />

    </fragment>
    <fragment
        android:id="@+id/foodRecipeDetailsFragment"
        android:name="com.example.weatherapp.foodFragment.FoodRecipeFragment"
        android:label="@string/food_recipe"
        tools:layout="@layout/fragment_food_recipe">

        <action
            android:id="@+id/action_food_recipe_to_category"
            app:destination="@+id/miscCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.weatherapp.splashScreenFragment.SplashScreenFragment"
        android:label=""
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splash_to_selection"
            app:destination="@+id/selectionFragment" />
        <action
            android:id="@+id/action_splash_to_farmer_details"
            app:destination="@+id/farmerDetailsFragment" />
        <action
            android:id="@+id/action_splash_to_category"
            app:destination="@+id/categoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.weatherapp.chooseCategory.ChooseCategoryFragment"
        android:label="@string/choose_category"
        tools:layout="@layout/fragment_category"
        >
        <action
            android:id="@+id/action_category_to_weather"
            app:destination="@+id/weatherFragment" />

        <action
            android:id="@+id/action_category_to_air"
            app:destination="@+id/airFragment" />

        <action
            android:id="@+id/action_category_to_pollen"
            app:destination="@+id/pollenFragment" />

        <action
            android:id="@+id/action_category_to_soil"
            app:destination="@+id/soilFragment" />

        <action
            android:id="@+id/action_category_to_fire"
            app:destination="@+id/fireFragment" />
        <action
            android:id="@+id/action_category_to_scanner"
            app:destination="@+id/scannerFragment" />
        <action
            android:id="@+id/action_category_to_register"
            app:destination="@+id/registerFragment" />

        <action
            android:id="@+id/action_category_to_user_profile"
            app:destination="@+id/userProfileFragment" />

        <action
            android:id="@+id/action_category_to_selection"
            app:destination="@+id/selectionFragment" />

    </fragment>
    <fragment
        android:id="@+id/productCategoryFragment"
        android:name="com.example.weatherapp.chooseProduct.ChooseProductFragment"
        android:label="Product Shop"
        tools:layout="@layout/choose_product_fragment"
        >
        <action
            android:id="@+id/action_category_to_cart"
            app:destination="@+id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.weatherapp.shopProduct.CartFragment"
        android:label="Shopping Cart"
        tools:layout="@layout/fragment_cart"
        >
        <action
            android:id="@+id/action_cart_to_payment"
            app:destination="@+id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/healthCategoryFragment"
        android:name="com.example.weatherapp.chooseCategory.ChooseHealthCategoryFragment"
        android:label="@string/health_category"
        tools:layout="@layout/fragment_health_category"
        >
        <action
            android:id="@+id/action_category_to_bmi"
            app:destination="@+id/bmiFragment" />
        <action
            android:id="@+id/action_category_to_body_fat"
            app:destination="@+id/bodyFatFragment" />
        <action
            android:id="@+id/action_category_to_ideal_weight"
            app:destination="@+id/idealWeightFragment" />
    </fragment>
    <fragment
        android:id="@+id/bodyFatFragment"
        android:name="com.example.weatherapp.bodyMassIndexFragment.BodyFatFragment"
        android:label="Body Fat Details"
        tools:layout="@layout/fragment_body_fat"
        >

    </fragment>
    <fragment
        android:id="@+id/bmiFragment"
        android:name="com.example.weatherapp.bodyMassIndexFragment.BodyMassIndexFragment"
        android:label="@string/body_mass_index"
        tools:layout="@layout/fragment_body_mass_index"
        >
        <action
            android:id="@+id/action_bmi_to_health_cate"
            app:destination="@+id/healthCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/idealWeightFragment"
        android:name="com.example.weatherapp.bodyMassIndexFragment.IdealWeightFragment"
        android:label="@string/ideal_weight"
        tools:layout="@layout/fragment_ideal_weight"
        >
        <action
            android:id="@+id/action_ideal_weight_to_health_cate"
            app:destination="@+id/healthCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.weatherapp.loginFragment.UserProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_profile">

        <action
            android:id="@+id/action_user_to_farmer_details"
            app:destination="@+id/farmerDetailsFragment" />

    </fragment>
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.weatherapp.weatherFragment.WeatherFragment"
        android:label="@string/weather_report"
        tools:layout="@layout/fragment_weather">

        <action
            android:id="@+id/action_weather_to_category"
            app:destination="@+id/categoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/airFragment"
        android:name="com.example.weatherapp.airFragment.AirFragment"
        android:label="@string/air_report"
        tools:layout="@layout/fragment_air">
        <action
            android:id="@+id/action_air_to_category"
            app:destination="@+id/categoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/pollenFragment"
        android:name="com.example.weatherapp.pollenFragment.PollenFragment"
        android:label="Pollen Report"
        tools:layout="@layout/fragment_air">
        <action
            android:id="@+id/action_pollen_to_category"
            app:destination="@+id/categoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/soilFragment"
        android:name="com.example.weatherapp.soilFragment.SoilFragment"
        android:label="Soil Report"
        tools:layout="@layout/fragment_air">
        <action
            android:id="@+id/action_soil_to_category"
            app:destination="@+id/categoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/fireFragment"
        android:name="com.example.weatherapp.fireFragment.FireFragment"
        android:label="Fire Report"
        tools:layout="@layout/fragment_air">
        <action
            android:id="@+id/action_fire_to_category"
            app:destination="@+id/categoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.example.weatherapp.barcodeScannerFragment.ScannerFragment"
        android:label="@string/barcode_scanner"
        tools:layout="@layout/fragment_scanner">
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.weatherapp.loginFragment.RegisterFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_verification"
            app:destination="@+id/verificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/verificationFragment"
        android:name="com.example.weatherapp.loginFragment.VerificationFragment"
        android:label="@string/verification"
        tools:layout="@layout/fragment_verify">
        <action
            android:id="@+id/action_verification_to_login"
            app:destination="@+id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.weatherapp.loginFragment.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_category"
            app:destination="@+id/categoryFragment" />

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@+id/registerFragment" />

        <action
            android:id="@+id/action_login_to_forgot_password"
            app:destination="@+id/forgotPasswordFragment" />

        <action
            android:id="@+id/action_login_to_farmer_details"
            app:destination="@+id/farmerDetailsFragment" />

        <action
            android:id="@+id/action_login_to_web_view"
            app:destination="@+id/webViewFragment" />

    </fragment>

    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.example.weatherapp.WebViewFragment"
        android:label="Google"
        tools:layout="@layout/fragment_webview">
    </fragment>


    <fragment
        android:id="@+id/farmerDetailsFragment"
        android:name="com.example.weatherapp.farmerDetailsFragment.FarmerDetailsFragment"
        android:label="@string/farmer_information"
        tools:layout="@layout/fragment_farmer_details">
        <action
            android:id="@+id/action_farmer_details_to_category"
            app:destination="@+id/categoryFragment" />
        <action
            android:id="@+id/action_farmer_details_to_selection"
            app:destination="@+id/selectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.weatherapp.loginFragment.ForgotPasswordFragment"
        android:label="@string/forgot_pass"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_forgot_password_to_login"
            app:destination="@+id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/dictionaryFragment"
        android:name="com.example.weatherapp.Dictionary.DictionaryFragment"
        android:label="@string/dictionary"
        tools:layout="@layout/fragment_dictionary">
        <action
            android:id="@+id/action_dictionary_to_misc_cate"
            app:destination="@+id/miscCategoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.weatherapp.PaymentFragment"
        android:label="Payment Status"
        tools:layout="@layout/fragment_payment">
    </fragment>
</navigation>