<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp">

        <TextView
            android:id="@+id/idealWeightDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:paddingStart="@dimen/_10dp"
            android:text="@string/ideal_weight_details"
            android:textColor="@color/colorVirenxia" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idealWeightDetailsTextView"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:fontFamily="@font/segoe_ui"
            android:padding="@dimen/_8dp"
            android:text="@string/select_gender"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_14sp" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/genderTextView"
           >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:fontFamily="@font/segoe_ui"
                android:textColor="@color/dark_grey"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:textColor="@color/dark_grey"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderRadioGroup"
            android:paddingEnd="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:hint="@string/height_in_cm"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textSize="@dimen/_14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleSmall"
            android:visibility="gone"
            android:layout_below="@id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heightTextInputLayout"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:backgroundTint="@color/colorVirenxia"
            android:elevation="@dimen/_6dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:padding="@dimen/_14dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/idealWeightDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loadingProgressBar"
           android:layout_marginTop="@dimen/_20dp"
            android:orientation="vertical"
            android:padding="@dimen/_8dp"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:layout_weight="1"
                android:fontFamily="@font/segoe_ui_bold"
                android:padding="@dimen/_6dp"
                android:text="@string/ideal_weight_according_to"
                android:textColor="@color/dark_grey" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="@dimen/_6dp"
                    android:text="@string/hamwi_method"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/hamwiMethodTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_italic"
                    android:gravity="start"
                    android:padding="@dimen/_6dp"
                    android:textColor="@color/dark_grey"
                    tools:text="dkjfah" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="@dimen/_6dp"
                    android:text="@string/devine_method"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/devineMethodTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_italic"
                    android:gravity="start"
                    android:padding="@dimen/_6dp"
                    android:textColor="@color/dark_grey"
                    tools:text="dkjfah" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="@dimen/_6dp"
                    android:text="@string/miller_method"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/millerMethodTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_italic"
                    android:gravity="start"
                    android:padding="@dimen/_6dp"
                    android:textColor="@color/dark_grey"
                    tools:text="dkjfah" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="@dimen/_6dp"
                    android:text="@string/robinson_method"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/robinsonMethodTextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/segoe_ui_italic"
                    android:gravity="start"
                    android:padding="@dimen/_6dp"
                    android:textColor="@color/dark_grey"
                    tools:text="dkjfah" />


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/touchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

    </FrameLayout>
</RelativeLayout>